<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    tools:context=".Phone_Login.VerifyPhoneActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="#FFFFFF"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/logos" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="400dp"
        android:layout_height="485dp"
        android:layout_below="@id/relativeLayout"
        android:layout_marginTop="-24dp"
        android:orientation="vertical"
        android:padding="10dp">

        <Button
            android:id="@+id/buttonSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_otp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@color/colorPrimaryDark"
            android:text="@string/signin"
            android:textAllCaps="false"
            android:textColor="#cdd8f1" />

        <Button
            android:id="@+id/button_resend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/et_otp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="82dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:background="@color/colorPrimaryDark"
            android:text="@string/resend"
            android:textAllCaps="false"
            android:textColor="#cdd8f1" />

        <TextView
            android:id="@+id/et_otp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/progressbar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:digits="0123456789"
            android:drawablePadding="10dp"
            android:hint="@string/otp"
            android:inputType="phone"
            android:maxLength="10" />


        <ProgressBar
            android:id="@+id/progressbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/textView"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/counttime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/counttime"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:text="@string/Wait"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline"
            android:textColor="@color/colorPrimaryDark" />

    </RelativeLayout>

</RelativeLayout>
</ScrollView>
